--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -23,7 +23,6 @@ framework:
         engines: ['twig']
     default_locale:  "%locale%"
     trusted_hosts:   ~
-    trusted_proxies: ~
     session:
         # http://symfony.com/doc/current/reference/configuration/framework.html#handler-id
         handler_id:  session.handler.native_file
@@ -31,6 +30,10 @@ framework:
     fragments:       ~
     http_method_override: true
     assets: ~
+
+sensio_framework_extra:
+    router:
+        annotations: false
 
 # Twig Configuration
 twig:
@@ -57,7 +60,7 @@ doctrine:
 
     orm:
         auto_generate_proxy_classes: "%kernel.debug%"
-        naming_strategy: doctrine.orm.naming_strategy.underscore
+        naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
         auto_mapping: true
 
 # Swiftmailer Configuration
