--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "php": ">=7.1.3",
+        "php": ">=7.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "composer/package-versions-deprecated": "1.11.99.2",
@@ -55,7 +55,8 @@
         "symfony/phpunit-bridge": "^5.3",
         "symfony/stopwatch": "^4.4",
         "symfony/var-dumper": "^4.4",
-        "symfony/web-profiler-bundle": "^4.4"
+        "symfony/web-profiler-bundle": "^4.4",
+        "symfony/test-pack": "^1.0"
     },
     "config": {
         "preferred-install": {
