--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,8 @@
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "liip/test-fixtures-bundle": "^1.0.0",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "^4.4",
         "symfony/css-selector": "^4.4",
@@ -54,9 +56,9 @@
         "symfony/maker-bundle": "^1.0",
         "symfony/phpunit-bridge": "^5.3",
         "symfony/stopwatch": "^4.4",
+        "symfony/test-pack": "^1.0",
         "symfony/var-dumper": "^4.4",
-        "symfony/web-profiler-bundle": "^4.4",
-        "symfony/test-pack": "^1.0"
+        "symfony/web-profiler-bundle": "^4.4"
     },
     "config": {
         "preferred-install": {
